# debug_test

./: Cargo.toml  Cross.toml  LICENSE  README.md
crates/jiekou/: Cargo.toml
crates/jiekou/src/: 1ap_9w.rs  35gen_update.rs  ap_forever_upgrade.rs  ap_proxy.rs  api_test.rs  check_dachangjing_hb.rs  check_reboot_esl.rs  esl_update_gonghao.rs  eslworking_log_fenxi.rs  fenpi_shandeng.rs  fenpibianjia.rs  fenxi.rs  fenxi_chan.rs  fenxi_channel.rs  find_hb.rs  geo_lost_set.rs  is_upgrade.rs  jiaxing_lcd.rs  main.rs  make_plt.rs  merge_eslw_log.rs  merge_gz.rs  mock_ap.rs  mock_web_ser.rs  mpmt.rs  netto_global_page.rs  network_repeat.rs  pris_bind.rs  pris_upate.rs  prismart_bind.rs  ps_bind_esl.rs  ps_del_esl.rs  quanju.rs  resetkey.rs  search_port.rs  testX_API_ALL.py  test_API.rs  unbind_esl.rs  update_four_tempalte.rs  update_pic.rs  (+2 more)
crates/jleague/: Cargo.toml
crates/jleague/src/: conf.yml  get_peilv.rs  main.rs  peilv_email.rs  peilvemail.rs  run.yml
crates/poc/: Cargo.toml
crates/poc/src/: fockkey.rs  js_ps_del.rs  main.rs  mock_ap.rs  ps_bind.rs  updateesl.rs
crates/saas/: Cargo.toml
crates/sam/: Cargo.toml
crates/sam/src/: export.xlsx  main.rs
crates/sandaitongji/: Cargo.toml
crates/sandaitongji/src/: dabiao  forward_finished.rs  product3.rs
