[package]
name = "jiekou"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
base64 = "0.21"
mongodb = "2.5"         # 官方 MongoDB 驱动
futures = "0.3"
mysql = "20.1.0"
csv = "1.1"
md5 = "0.7"
plotters = "0.3"